--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@vitejs/plugin-vue": "^5.0.3",
+    "hardhat": "^2.22.16",
     "vite": "^5.0.11"
   }
 }
