--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^11.0.2",
     "leaflet": "^1.9.4",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
