--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "firebase": "^11.0.2",
     "leaflet": "^1.9.4",
+    "pinia": "^2.3.0",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
